# TrackieLink

./: .gitignore  ARCHITECTURE.md  Build.bat  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conanfile.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Scripts/: Build.bat  Build.sh  CoreWay.sh
src/Data/: trckconfig.msgpack
src/Data/ForSystemInstructions/: sys.msgpack
src/Services/gemini_service/: CMakeLists.txt
src/Services/gemini_service/include/: gemini_service.hpp
src/Services/gemini_service/src/: gemini_service.cpp
src/WorkTools/Models/Contextual/: .gitignore
src/api/gemini_rest_client/: CMakeLists.txt
src/api/gemini_rest_client/apic/: comment  gemini_client.cpp
src/api/gemini_rest_client/include/: gemini_client.hpp
src/core/ai_core/: ai_provider.hpp
src/core/c_core/: CMakeLists.txt
src/core/c_core/include/c_core/: hashmap.h  linked_list.h  vector.h
src/core/c_core/src/: hashmap.c  linked_list.c  vector.c
src/core/c_core/tests/: test_vector.c
src/core/cpp_core/: CMakeLists.txt
src/core/cpp_core/Core/: application.cpp  comment  face_database.cpp  main.cpp
src/core/cpp_core/include/: application.hpp  comment  face_database.hpp
src/core/cuda_core/: CMakeLists.txt
src/core/cuda_core/include/cuda_core/: image_filters.h  image_kernels.h  matrix_ops.h  memory.h  vector_ops.h
src/core/cuda_core/src/: image_filters.cu  image_kernels.cu  matrix_ops.cu  memory.cu  vector_ops.cu
src/core/objc_core/: CMakeLists.txt
src/core/objc_core/include/objc_core/: power_management.h  system_info.h
src/core/objc_core/src/: power_management.mm  system_info.mm
src/core/rocm_core/: CMakeLists.txt
src/core/rocm_core/include/rocm_core/: image_filters.h  vector_ops.h
src/core/rocm_core/src/: image_filters.hip  vector_ops.hip
src/core/rust_core/src/: comment  lib.rs
src/modules/Vision/: CMakeLists.txt
src/modules/Vision/include/: face_processor.hpp  midas_processor.hpp  yolo_processor.hpp
src/modules/Vision/src/: face_processor.cpp  midas_processor.cpp  yolo_processor.cpp
src/modules/audio_processing/: CMakeLists.txt
src/modules/audio_processing/handler/: audio_handler.cpp  comment
src/modules/audio_processing/include/: audio_handler.hpp  comment
src/modules/c_inference/: CMakeLists.txt
src/modules/c_inference/Inf/: comment  inference.c
src/modules/c_inference/include/: comment  inference.h
src/modules/cpp_inference/: CMakeLists.txt  inference_engine.cpp  inference_engine.hpp
src/modules/cuda_linalg/: CMakeLists.txt
src/modules/cuda_linalg/include/cuda_linalg/: matrix_ops.h
src/modules/cuda_linalg/src/: matrix_ops.cu
src/modules/function_calling/: CMakeLists.txt
src/modules/function_calling/include/: function_handler.hpp
src/modules/function_calling/src/: function_handler.cpp
src/modules/metal_renderer/: CMakeLists.txt
src/modules/metal_renderer/include/metal_renderer/: renderer.h
src/modules/metal_renderer/src/: compute_kernels.metal  renderer.mm  shaders.metal
src/modules/msgpack_loader/: CMakeLists.txt
src/modules/msgpack_loader/include/: packloader.hpp
src/modules/msgpack_loader/pkcore/: packloader.cpp
src/modules/video_processing/: CMakeLists.txt  comment
src/modules/video_processing/handler/: video_handler.cpp
src/modules/video_processing/include/: video_handler.hpp
src/modules/vision/include/: vision_cuda.hpp
src/modules/vision/src/: vision_cuda.cu
src/providers/anthropic_provider/: CMakeLists.txt
src/providers/anthropic_provider/include/: anthropic_provider.hpp
src/providers/anthropic_provider/src/: anthropic_provider.cpp
src/providers/gemini_provider/: CMakeLists.txt
src/providers/gemini_provider/include/: comment  gemini_provider.hpp
src/providers/gemini_provider/src/: gemini_provider.cpp
src/providers/meta_provider/: CMakeLists.txt
src/providers/meta_provider/include/: meta_provider.hpp
src/providers/meta_provider/src/: meta_provider.cpp
src/providers/openai_provider/: CMakeLists.txt
src/providers/openai_provider/include/: openai_provider.hpp
src/providers/openai_provider/src/: openai_provider.cpp
src/rust_core/: Cargo.toml
src/rust_core/Rcore/: lib.rs
src/shared/ffi/: cpp_to_rust_bridge.h  rust_to_cpp_bridge.h
src/shared/types/: common_types.h  vision_types.h
src/shared/utils/: CMakeLists.txt  base64.cpp  base64.h
src/shared/utils/tests/: test_base64.cpp
