#
# Author: Pedro h. Garcia <phkaiser13>.
# Licensed under the vyAI Social Commons License 1.0
# See the LICENSE file in the project root.
#
# You are free to use, modify, and share this file under the terms of the license,
# provided proper attribution and open distribution are maintained.
#

[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"
authors = ["Pedro h. Garcia <phkaiser13>"]

# --- Configuração da Biblioteca para FFI (Foreign Function Interface) ---
#
# Esta é a seção mais importante para a integração com C/C++.
# Ela instrui o Cargo a compilar nosso código Rust como uma biblioteca estática.
# O resultado será um arquivo 'librust_core.a' (em Linux/macOS) ou
# 'librust_core.lib' (em Windows), que pode ser vinculado diretamente
# pelo nosso executável C++ através do CMake.
[lib]
name = "rust_core"
crate-type = ["staticlib"]

# --- Dependências do Rust (Crates) ---
#
# Aqui listamos quaisquer bibliotecas externas (chamadas de 'crates')
# que nosso código Rust precise. O Cargo as baixará e compilará
# automaticamente do registro oficial crates.io.
[dependencies]
# A crate 'libc' fornece as definições de tipo da biblioteca padrão C
# (como c_char, c_int, size_t). É essencial para escrever uma interface
# FFI limpa e correta.
libc = "0.2"